cmake_minimum_required(VERSION 3.22)
set(CMAKE_C_COMPILER "/usr/bin/clang")
set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
SET(CMAKE_TOOLCHAIN_FILE "/home/fanghz/lib/vcpkg/scripts/buildsystems/vcpkg.cmake")
project(example)
set(CMAKE_CXX_STANDARD 20)
SET(CMAKE_BUILD_TYPE "Release")
find_package(Threads REQUIRED)
find_package(re2 CONFIG REQUIRED)
find_package(absl CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(TBB CONFIG REQUIRED)
find_package(Taskflow CONFIG REQUIRED)
find_package(PkgConfig)
pkg_check_modules(liburing REQUIRED IMPORTED_TARGET GLOBAL liburing>=2.0)
find_package(benchmark CONFIG REQUIRED)
find_package(cppzmq CONFIG REQUIRED)

target_link_libraries(test_parseDigitsSIMD PRIVATE benchmark::benchmark benchmark::benchmark_main)
add_executable(test_par_select test_par_select.cc)
target_link_libraries(test_par_select PRIVATE benchmark::benchmark benchmark::benchmark_main TBB::tbb TBB::tbbmalloc)
add_executable(main main.cc)
target_link_libraries(main PRIVATE cppzmq cppzmq-static)